# simpdf

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements-dev.txt
simpdf/: __init__.py  _common.py  break_rich_text.py  break_text.py  bullet_points.py  container.py  content_group.py  image.py  indentation.py  inline_image.py  line.py  page_flush.py  pdf.py  rgb.py  rich_text.py  separator.py  stretch_rich_text.py  stretch_text.py  text.py  text_style.py  unsafe.py  vertical_space.py
tests/: conftest.py  pdf_reverse_tool.py  test_inline_image.py  test_pdf.py  test_pdf_bbox.py  test_rgb.py  test_separator.py  test_text.py  test_text_style.py  test_vertical_space.py
