[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simpdf"
version = "0.1.8"
description = "A simple, pixel-perfect PDF layout logic package"
readme = "README.md"
keywords = ["pdf", "python", "reportlab", "layout", "document", "generation", "pixel-perfect", "pdf-generation", "typesetting", "publishing"]
requires-python = ">=3.10"
license = { text = "MIT License" }
dependencies = ["reportlab"]

[tool.setuptools.packages.find]
where = ["."]
include = ["simpdf*"]
